tests/samples/expression-invalid-4/template.blate
// error: 4.m258
        { (na9me_.a().pm["[]"][mop]["mop'op"].mm(4.m258,'oplm').tty + 9  + (mmo[lm]))}
